--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,75 +1,95 @@
-:root {
-  --primay: black;
-  --bg-primay: white;
+$base-color: #3f3b6c;
+$header-color: #a3c7d6;
+$foot-color: #9f73ab;
+$secondary-color: #624f82;
 
-  --link: #2a0b0b;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-p {
-  margin: 20px 0px;
-}
-
-.header {
-  font-size: 3rem;
-}
-
-.body {
-  margin: 20px 0 10px;
-  font-size: 0.9rem;
-}
-
-button {
-  outline: none;
-  border: none;
-  border-radius: 8px;
-  padding: 10px 35px;
-
-  background: #845ec2;
-  color: white;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@mixin flex-center-column {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-
-  background: var(--bg-primay);
-  color: var(--primay);
 }
 
-.App-link {
-  color: #61dafb;
-  color: var(--link);
+@mixin flex-center-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+body {
+  height: 100vh;
+  background-color: $base-color;
+  font-family: sans-serif;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  background-color: $header-color;
+  &-list {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    padding-right: 1rem;
+    gap: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  &-link {
+    list-style-type: none;
+    @include flex-center-row;
+    &:first-of-type {
+      margin-right: auto;
+      a {
+        font-size: 2rem;
+        font-weight: bold;
+      }
+    }
+    a {
+      cursor: pointer;
+      font-size: 1.25rem;
+      color: white;
+      text-decoration: none;
+    }
   }
 }
 
-button {
-  font-size: calc(10px + 2vmin);
+.login-container {
+  @include flex-center-row;
+  height: 100%;
+  width: 100%;
+  .google-login {
+    @include flex-center-column;
+    gap: 1rem;
+    padding: 1rem;
+    height: 40%;
+    width: 30%;
+    background-color: #a3c7d6;
+    border-radius: 10px;
+    border: 2px solid white;
+  }
+  .google-svg {
+    align-self: flex-start;
+    height: 40%;
+    margin: 0 auto;
+  }
+  .google-signin-btn {
+    cursor: pointer;
+    margin: 0 auto;
+    width: 70%;
+    height: 25%;
+    font-size: 1.5rem;
+    border: none;
+    color: white;
+    background-color: $foot-color;
+    &:hover {
+      background-color: rgba($color: $foot-color, $alpha: 0.5);
+    }
+  }
 }
