--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -34,6 +34,11 @@ body {
   width: 100%;
   height: 10%;
   background-color: $header-color;
+  &-profile-logo {
+    height: 50px;
+    width: 100%;
+    border-radius: 100%;
+  }
   &-list {
     height: 100%;
     width: 100%;
@@ -88,8 +93,94 @@ body {
     border: none;
     color: white;
     background-color: $foot-color;
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
     &:hover {
       background-color: rgba($color: $foot-color, $alpha: 0.5);
+    }
+  }
+}
+
+.posts-container {
+  @include flex-center-column;
+  padding: 1.5rem;
+  .posts-add-btn {
+    padding: 1rem 3rem;
+    font-weight: bold;
+    color: cyan;
+    background-color: $secondary-color;
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
+    border: none;
+    cursor: pointer;
+    &:hover {
+      background-color: rgba($color: $foot-color, $alpha: 0.5);
+    }
+  }
+  .modal-overlay {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba($color: black, $alpha: 0);
+    pointer-events: none;
+    &.active {
+      pointer-events: all;
+      background-color: rgba($color: black, $alpha: 0.5);
+      .post-form {
+        @include flex-center-column;
+      }
+    }
+  }
+  .post-form {
+    display: none;
+    position: absolute;
+    opacity: 1;
+    gap: 1rem;
+    top: 50%;
+    left: 50%;
+    padding: 2rem 4rem 4rem 4rem;
+    border-radius: 7%;
+    box-shadow: 0px 2px 10px 2px rgba(255, 255, 255, 0.3);
+    background-color: $header-color;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    &-exit {
+      margin-left: auto;
+      font-weight: bold;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+    .form-error {
+      @include flex-center-column;
+      height: 15%;
+      width: 70%;
+      background-color: red;
+      color: black;
+      font-weight: bold;
+      text-align: center;
+      padding: 1.5rem;
+    }
+    input {
+      border: none;
+      outline: none;
+      padding: 0.5rem;
+      border-radius: 10px;
+      &:focus {
+        background-color: rgba($color: black, $alpha: 0.1);
+        box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
+      }
+    }
+    button {
+      border: none;
+      padding: 1rem 2rem;
+      cursor: pointer;
+      border-radius: 100vmax;
+      font-weight: bold;
+      &:hover {
+        background-color: rgba($color: black, $alpha: 0.2);
+      }
     }
   }
 }
