--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -15,9 +15,18 @@ $secondary-color: #624f82;
   align-items: center;
   justify-content: center;
 }
+p {
+  padding: 0;
+  margin: 0;
+}
+
+body,
+html {
+  min-height: 100%;
+}
 
 body {
-  height: 100vh;
+  height: 100%;
   background-color: $base-color;
   font-family: sans-serif;
 }
@@ -62,6 +71,9 @@ body {
       a {
         font-size: 2rem;
         font-weight: bold;
+        @media screen and (max-width: 485px) {
+          display: none;
+        }
       }
     }
     a {
@@ -75,18 +87,8 @@ body {
 
 .login-container {
   @include flex-center-row;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  .google-login {
-    @include flex-center-column;
-    gap: 1rem;
-    padding: 1rem;
-    height: 40%;
-    width: 30%;
-    background-color: #a3c7d6;
-    border-radius: 10px;
-    border: 2px solid white;
-  }
   .google-svg {
     align-self: flex-start;
     height: 40%;
@@ -106,12 +108,35 @@ body {
       background-color: rgba($color: $foot-color, $alpha: 0.5);
     }
   }
+  .google-login {
+    @include flex-center-column;
+    gap: 1rem;
+    padding: 1rem;
+    height: 40%;
+    width: 30%;
+    background-color: #a3c7d6;
+    border-radius: 10px;
+    border: 2px solid white;
+    @media screen and (max-width: 485px) {
+      height: 40%;
+      width: 60%;
+    }
+    @media screen and (min-width: 700px) and (min-height: 950px) {
+      width: 60%;
+    }
+  }
 }
 
 .posts-container {
   @include flex-center-column;
   padding: 1.5rem;
-  .posts-add-btn {
+  height: 100%;
+  .controls {
+    @include flex-center-row;
+    gap: 1rem;
+  }
+  .posts-add-btn,
+  .comments-add-btn {
     padding: 1rem 3rem;
     font-weight: bold;
     color: cyan;
@@ -121,6 +146,15 @@ body {
     cursor: pointer;
     &:hover {
       background-color: rgba($color: $foot-color, $alpha: 0.5);
+    }
+    @media screen and (max-width: 485px) {
+      min-width: 50%;
+      height: 100%;
+    }
+    @media screen and (min-width: 700px) and (min-height: 950px) {
+      min-width: 50%;
+      height: 100%;
+      font-size: 2rem;
     }
   }
   .modal-overlay {
@@ -136,12 +170,18 @@ body {
     &.active {
       pointer-events: all;
       background-color: rgba($color: black, $alpha: 0.5);
-      .post-form {
+      .post-form,
+      .comment-form {
+        display: none;
+      }
+      .post-form.active,
+      .comment-form.active {
         @include flex-center-column;
       }
     }
   }
-  .post-form {
+  .post-form,
+  .comment-form {
     display: none;
     position: absolute;
     opacity: 1;
@@ -154,7 +194,7 @@ body {
     background-color: $header-color;
     transform: translate(-50%, -50%);
     z-index: 2;
-    &-exit {
+    .form-exit {
       margin-left: auto;
       font-weight: bold;
       font-size: 1.5rem;
@@ -170,6 +210,7 @@ body {
       text-align: center;
       padding: 1.5rem;
     }
+
     input {
       border: none;
       outline: none;
@@ -189,6 +230,153 @@ body {
       &:hover {
         background-color: rgba($color: black, $alpha: 0.2);
       }
+    }
+  }
+}
+
+.posts {
+  @include flex-center-column;
+  gap: 2.5rem;
+  width: 100%;
+  height: 100%;
+  margin-top: 2rem;
+  min-height: 260px;
+  .post-item {
+    @include flex-center-row;
+    background-color: $foot-color;
+    width: 35%;
+    height: 35%;
+    padding: 0 1rem;
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    cursor: pointer;
+    &-title {
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      border-bottom: 1px solid black;
+      overflow: hidden;
+    }
+    &-body {
+      font-size: 1.3rem;
+      max-height: 80%;
+      overflow: hidden;
+      margin-bottom: auto;
+    }
+    &-photo {
+      border-radius: 100%;
+      width: 15%;
+      cursor: pointer;
+    }
+    &-controls {
+      display: flex;
+      gap: 0.5rem;
+      align-self: flex-end;
+      button {
+        cursor: pointer;
+        background-color: $secondary-color;
+        border: none;
+        outline: none;
+        border-radius: 100vmax;
+        padding: 0.5rem;
+        box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
+        &:hover {
+          background-color: rgba($color: $secondary-color, $alpha: 0.5);
+        }
+      }
+    }
+    &-info {
+      @include flex-center-row;
+      align-self: flex-end;
+      gap: 1rem;
+      padding: 0.5rem 0 0 0;
+      color: rgb(41, 41, 41);
+    }
+    .post-details {
+      display: flex;
+      flex-direction: column;
+      padding: 0.5rem;
+      width: 100%;
+      height: 100%;
+    }
+    @media screen and (max-width: 485px) {
+      width: 100%;
+      height: 60%;
+      .post-item-info {
+        font-size: 0.85rem;
+      }
+    }
+    @media screen and (min-width: 700px) and (min-height: 950px) {
+      width: 90%;
+      height: 40%;
+      font-size: 1.7rem;
+      .post-item-body,
+      .post-item-title {
+        font-size: 2rem;
+      }
+    }
+  }
+}
+
+.comments {
+  @include flex-center-column;
+  gap: 1.5rem;
+  width: 100%;
+  height: 100%;
+  margin-top: 2rem;
+  &-header {
+    color: $header-color;
+  }
+  .comment-item {
+    @include flex-center-row;
+    padding: 0 1rem;
+    gap: 0.75rem;
+    justify-content: flex-start;
+    background-color: #9f73ab;
+    width: 35%;
+    height: 35%;
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 0.75rem;
+    &-photo {
+      border-radius: 100%;
+      width: 10%;
+      cursor: pointer;
+    }
+    &-details {
+      @include flex-center-column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
+    &-info {
+      @include flex-center-row;
+      gap: 1rem;
+      margin-top: auto;
+      color: rgb(41, 41, 41);
+    }
+    .comment-delete-btn {
+      cursor: pointer;
+      background-color: $secondary-color;
+      border: none;
+      outline: none;
+      border-radius: 100vmax;
+      padding: 0.5rem;
+      box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
+      &:hover {
+        background-color: rgba($color: $secondary-color, $alpha: 0.5);
+      }
+    }
+    @media screen and (max-width: 485px) {
+      width: 100%;
+      height: 60%;
+      .comment-item-info {
+        font-size: 0.85rem;
+      }
+    }
+    @media screen and (min-width: 700px) and (min-height: 950px) {
+      width: 90%;
+      height: 40%;
+      font-size: 2rem;
     }
   }
 }
